--- a/front/src/assets/styles.css
+++ b/front/src/assets/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+.navigation{
+    margin: 0px;
+    padding: 0px  !important;
+
+}
+.navigation .navbar {
+    border-radius: 0px !important;
+    background: #E95420;
+    border: none;
+    
+}
+.navigation .navbar {
+    color: whitesmoke !important;
+}
