--- a/front/src/app/components/register/register.component.html
+++ b/front/src/app/components/register/register.component.html
@@ -1,1 +1,37 @@
-<h1>{{title}}</h1>
+<div>
+    <h1>{{title}}</h1>
+    <form #registerForm="ngForm" (ngSubmit) = "onSubmit(registerForm)" class = "col-lg-10" ></form>
+    <p>
+        <label> Nombre </label>
+        <input type="text" name="name" #name="ngModel" [(ngModel)] = "user.name" class = "form-control" required />
+        <span *ngIf = "!name.valid && name.touched">
+            ¡El nombre es obligatorio!
+        </span>
+    </p>
+
+    <p>
+        <label> Role </label>
+        <input type="text" name="role" #role="ngModel" [(ngModel)] = "user.role" class = "form-control" required />
+        <span *ngIf = "!role.valid && role.touched">
+            ¡Es obligatorio introducir el role!
+        </span>
+    </p>
+
+    <p>
+        <label> Correo electrónico </label>
+        <input type="text" name="email" #email="ngModel" [(ngModel)] = "user.email" class = "form-control" required />
+        <span *ngIf = "!email.valid && email.touched">
+            ¡El email es obligatorio!
+        </span>
+    </p>
+    
+    <p>
+        <label> Password </label>
+        <input type="text" name="pasword" #password="ngModel" [(ngModel)] = "user.password" class = "form-control" required />
+        <span *ngIf = "!password.valid && password.touched">
+            ¡Introducir el password es obligatorio!
+        </span>
+    </p>
+</div>
+
+
