Se ha maqueta el from de registro y se ha ligado con su ruta

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -8,29 +8,29 @@
 
       <ul class="nav navbar-nav">
         <li>
-          <a href="#">
-            <span class= "glyphicon glyphicon-home"></span>
+          <a href="#" style="color:blanchedalmond">
+            <span class= "glyphicon glyphicon-home" style="color:blanchedalmond" ></span>
             INICIO
           </a>
         </li>
         
         <li>
-          <a href="#">
-              <span class= "glyphicon glyphicon-apple"></span>
+          <a href="#" style="color:blanchedalmond">
+              <span class= "glyphicon glyphicon-apple" style="color:blanchedalmond"></span>
             DESAYUNOS
           </a>
        </li>
 
-       <li>
-        <a href="#">
-          <span class= "glyphicon glyphicon-cutlery"></span>
+       <li >
+        <a href="#" style="color:blanchedalmond">
+          <span class= "glyphicon glyphicon-cutlery" style="color:blanchedalmond"></span>
             COMIDA 
         </a>
        </li>
 
        <li>
-         <a href="#">
-          <span class= "glyphicon glyphicon-glass"></span>
+         <a href="#" style="color:blanchedalmond">
+          <span class= "glyphicon glyphicon-glass" style="color:blanchedalmond"></span>
               BEBIDAS
           </a>
         </li>
