--- a/front/src/app/components/register/register.component.html
+++ b/front/src/app/components/register/register.component.html
@@ -1,7 +1,8 @@
-<div class = "col-lg-4">
-    <div class="card">
-    <h1>{{title}}</h1>
-    <form #registerForm="ngForm" (ngSubmit) = "onSubmit(registerForm)" >
+<div>
+    <div class="card-body">
+    <h1 class="h1-strong">{{title}}</h1>
+    <form #registerForm="ngForm" (ngSubmit) = "onSubmit(registerForm)" class = "col col-lg-5">
+    <!-- <div class="card-body"> -->
     <p>
         <label> Nombre </label>
         <input type="text" name="name" #name="ngModel" [(ngModel)] = "user.name" class = "form-control" required />
@@ -35,7 +36,7 @@
         </span>
     </p>
     <input type= "submit" value=" {{title}}" class="btn btn-success" [disabled] = "!registerForm.form.valid"> 
-
+    <!-- </div> -->
     </form>
     </div>
 </div>
