--- a/front/src/assets/styles.css
+++ b/front/src/assets/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-
+.card {
+    border: 2px solid #eeeeee;
+}
 .h1-strong{
 font-size: 30px;
 font-weight: bold;
@@ -8,18 +10,22 @@ margin-bottom: 25px;
 padding-bottom: 15px ;
 border-bottom: 2px solid #eeeeee;
 }
-/* .navigation{
-    font-size: 15px;
-} */
-.navigation .navbar {
+.navigation{
+  
+    margin: 0px !important;
+    padding: 0px  !important;
 
+}
+.navigation .navbar {
+    
     border-radius: 0px !important;
     background: #E95420;
-    border: none;   
-}
- .navbar {
-    font-size: 15px;
-    color: whitesmoke !important;
-    margin: 15px !important;
+    border: none;
     
 }
+.navigation .navbar {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    color: whitesmoke !important;
+    padding-left: 20px;
+};
