--- a/front/src/app/components/register/register.component.html
+++ b/front/src/app/components/register/register.component.html
@@ -1,7 +1,7 @@
-<div class="card col-lg-6">
-    <div>
+<div class="card col-lg-5">
+    
     <h1 class="h1-strong">{{title}}</h1>
-    <form #registerForm="ngForm" (ngSubmit) = "onSubmit(registerForm)" class = "col col-lg-6">
+    <form #registerForm="ngForm" (ngSubmit) = "onSubmit()" class = "col-lg-12">
             <div class="card-body">
     <p>
         <label> Nombre </label>
@@ -38,7 +38,7 @@
     <input type= "submit" value=" {{title}}" class="btn btn-success" [disabled] = "!registerForm.form.valid"> 
     </div>
     </form>
-    </div>
+   
 </div>
 
 
