--- a/front/src/app/components/register/register.component.html
+++ b/front/src/app/components/register/register.component.html
@@ -1,7 +1,14 @@
-<div class="card col-lg-5">
-    
+<div class="card col-lg-5">   
     <h1 class="h1-strong">{{title}}</h1>
-    <form #registerForm="ngForm" (ngSubmit) = "onSubmit()" class = "col-lg-12">
+
+    <div class = "alert alert-success" *ngIf = "status == 'success'">
+        Registro completado correctamente, <a [routerLink]= "['/login']"> Identíficate aquí.</a>
+    </div> 
+
+    <div class= "alert alert-danger" *ngIf="status == 'error'">
+        El registro no se ha podido realizar, intentalo de nuevo, algunos de los datos que ingresaste ya estan en uso.
+    </div>
+    <form #registerForm="ngForm" (ngSubmit) = "onSubmit(registerForm)" class = "col-lg-12">
             <div class="card-body">
     <p>
         <label> Nombre </label>
@@ -29,8 +36,8 @@
     
     <p>
         <label> Contraseña </label>
-        <input type="text" name=
-        "pasword" #password="ngModel" [(ngModel)] = "user.password" class = "form-control" required />
+        <input type="password" name=
+        "password" #password="ngModel" [(ngModel)] = "user.password" class = "form-control" required />
         <span *ngIf = "!password.valid && password.touched">
             ¡Introducir la contraseña es obligatorio!
         </span>
