--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="navigation col-lg-12">
-  <nav class = "navbar navbar-default">
+  <nav class = "nav navbar navbar-default">
     <div class= "container-fluid">
 
       <div class = "navbar-header">
         <a href="#" class= "navbar brand">{{title}}</a>
       </div>
 
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav"  *ngIf = "identity">
         <li>
           <a href="#" style="color:blanchedalmond">
             <span class= "glyphicon glyphicon-home" style="color:blanchedalmond" ></span>
@@ -32,6 +32,24 @@
          <a href="#" style="color:blanchedalmond">
           <span class= "glyphicon glyphicon-glass" style="color:blanchedalmond"></span>
               BEBIDAS
+          </a>
+        </li>
+      </ul>
+      
+      <ul class= "nav navbar navbar-nav navbar-right">
+        <li >
+          <a [routerLink]= "['/login']" [routerLinkActive] = "['active']" 
+          style="color:blanchedalmond">
+            <span class= "glyphicon glyphicon-log-in" style="color:blanchedalmond"></span>
+              Ingresa tu usuario.
+          </a>
+        </li>
+  
+        <li>
+          <a [routerLink]= "['/login']" [routerLinkActive]= "['active']"
+          style="color:blanchedalmond">
+            <span class= "glyphicon glyphicon-user" style="color:blanchedalmond"></span>
+                Registro primer ingreso.
           </a>
         </li>
       </ul>
