--- a/front/src/assets/styles.css
+++ b/front/src/assets/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+/* Estilos generales */
+
 .card {
     border: 2px solid #eeeeee;
 }
@@ -10,6 +12,12 @@ margin-bottom: 25px;
 padding-bottom: 15px ;
 border-bottom: 2px solid #eeeeee;
 }
+.active{
+    background:  rgb(170, 55, 13);
+}
+
+
+/* Estilo de la barra de navegación */
 .navigation{
   
     margin: 0px !important;
@@ -19,7 +27,7 @@ border-bottom: 2px solid #eeeeee;
 .navigation .navbar {
     
     border-radius: 0px !important;
-    background: #E95420;
+    background: rgb(231, 87, 34);
     border: none;
     
 }
@@ -29,3 +37,6 @@ border-bottom: 2px solid #eeeeee;
     color: whitesmoke !important;
     padding-left: 20px;
 };
+.navigation .navbar a:hover{
+    background:  rgb(170, 55, 13) !important;
+}
