--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -1,6 +1,12 @@
-<div class= "col col-lg-8 col-lo-offset-2">
-    <div class= "jumbotron">
+<body >
+    <!-- <img src="./assets/images/bg-wall.jpg" alt=""> -->
+    <div class= "col col-lg-8 col-lg-offset-2">
+        <div class= "jumbotron">
             <h1 class="h1-strong">{{title}}</h1>
+            <p>Burguer Queen es parte de tú día, elige el desayuno o comida de tu elección.</p>
+        </div>
     </div>
+   
+</body>
+  
 
-</div>
