--- a/front/src/assets/styles.css
+++ b/front/src/assets/styles.css
@@ -8,35 +8,39 @@
 font-size: 30px;
 font-weight: bold;
 margin-left: 13px;
-margin-bottom: 25px; 
+margin-bottom: 25px;
 padding-bottom: 15px ;
 border-bottom: 2px solid #eeeeee;
 }
 .active{
-    background:  rgb(170, 55, 13);
+    background:  rgb(186, 53, 4) !important;
 }
 
 
 /* Estilo de la barra de navegación */
 .navigation{
-  
+
     margin: 0px !important;
     padding: 0px  !important;
 
 }
 .navigation .navbar {
-    
+
     border-radius: 0px !important;
     background: rgb(231, 87, 34);
     border: none;
-    
+
 }
 .navigation .navbar {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 15px;
     color: whitesmoke !important;
     padding-left: 20px;
-};
-.navigation .navbar a:hover{
-    background:  rgb(170, 55, 13) !important;
 }
+.navigation .navbar a:hover{
+  background:  rgb(186, 53, 4) !important;
+}
+.navigation .navbar .dropdown-menu *{
+  color: black !important;
+}
+
